Replace Pkl run plans with JavaScript